--- a/config
+++ b/config
@@ -1,22 +1,29 @@
 include config-default
 
 bindsym $emod+Tab mode "passthrough"
-bindsym $emod+Backspace scratchpad show;resize set $scratchw $scratchh; mode "passthrough"
+bindsym $emod+Escape exec bash $curr/open_scratch.sh $currscratch $scratchw $scratchh
 
 mode passthrough {
-    bindsym $emod+Backspace scratchpad show; mode "default"
+    bindsym $emod+Escape scratchpad show; mode "default"
+    bindsym $mod+Escape scratchpad show; mode "default"
     bindsym $emod+Tab mode "default"
+    bindsym $mod+m scratchpad show; set $currscratch browser; exec bash $curr/open_scratch.sh browser $scratchw $scratchh
+    bindsym $mod+b scratchpad show; set $currscratch media;   exec bash $curr/open_scratch.sh media $scratchw $scratchh
+    bindsym $mod+z scratchpad show; set $currscratch mail;    exec bash $curr/open_scratch.sh mail $scratchw $scratchh
 }
 
 bindsym $mod+c move scratchpad;exec touch /tmp/scratchpad
-bindsym $mod+b scratchpad show;resize set $scratchw $scratchh
+# bindsym $mod+b scratchpad show;resize set $scratchw $scratchh
 bindsym $smod+space floating toggle;exec rm  /tmp/scratchpad
-bindsym $mod+g exec sway -c ~/.config/sway/config-scratch
+bindsym $mod+g exec sway -c ~/.config/sway/config-scratch && sway move scratchpad
 
 # pasting from nested sway session clipboard
 bindsym $smod+v exec WAYLAND_DISPLAY=$waydispnest wl-paste -n | WAYLAND_DISPLAY=$waydisp wl-copy
 
-# always move nested sway session to scratchpad
-for_window [app_id="wlroots"] move scratchpad
+bindsym $mod+m set $currscratch browser; exec bash $curr/open_scratch.sh browser $scratchw $scratchh
+bindsym $mod+b set $currscratch media;   exec bash $curr/open_scratch.sh media $scratchw $scratchh
+bindsym $mod+z set $currscratch mail;    exec bash $curr/open_scratch.sh mail $scratchw $scratchh
 
 exec lxterminal
+
+exec clipboard-sync &> /dev/null
