better righthand-only keymaps

--- a/config
+++ b/config
@@ -2,15 +2,15 @@ include config-default
 
 bindsym $emod+Tab mode "passthrough"
 bindsym $emod+Escape exec bash $curr/open_scratch.sh $currscratch $scratchw $scratchh
-bindsym $mod+x exec bash $curr/open_scratch.sh $currscratch $scratchw $scratchh
+bindsym $mod+j exec bash $curr/open_scratch.sh $currscratch $scratchw $scratchh
 
 mode passthrough {
     bindsym $emod+Escape scratchpad show; mode "default"
-    bindsym $mod+x scratchpad show; mode "default"
+    bindsym $mod+j scratchpad show; mode "default"
     bindsym $emod+Tab mode "default"
-    bindsym $mod+m scratchpad show; set $currscratch browser; exec bash $curr/open_scratch.sh browser $scratchw $scratchh
-    bindsym $mod+b scratchpad show; set $currscratch media;   exec bash $curr/open_scratch.sh media $scratchw $scratchh
-    bindsym $mod+n scratchpad show; set $currscratch mail;    exec bash $curr/open_scratch.sh mail $scratchw $scratchh
+    bindsym $mod+u scratchpad show; set $currscratch browser; exec bash $curr/open_scratch.sh browser $scratchw $scratchh
+    bindsym $mod+i scratchpad show; set $currscratch media;   exec bash $curr/open_scratch.sh media $scratchw $scratchh
+    bindsym $mod+o scratchpad show; set $currscratch mail;    exec bash $curr/open_scratch.sh mail $scratchw $scratchh
 }
 
 # bindsym $mod+c move scratchpad;exec touch /tmp/scratchpad
@@ -18,9 +18,9 @@ mode passthrough {
 bindsym $smod+space floating toggle;exec rm  /tmp/scratchpad
 bindsym $mod+g exec sway -c ~/.config/sway/config-scratch && sway move scratchpad
 
-bindsym $mod+m set $currscratch browser; exec bash $curr/open_scratch.sh browser $scratchw $scratchh
-bindsym $mod+b set $currscratch media;   exec bash $curr/open_scratch.sh media $scratchw $scratchh
-bindsym $mod+n set $currscratch mail;    exec bash $curr/open_scratch.sh mail $scratchw $scratchh
+bindsym $mod+u set $currscratch browser; exec bash $curr/open_scratch.sh browser $scratchw $scratchh
+bindsym $mod+i set $currscratch media;   exec bash $curr/open_scratch.sh media $scratchw $scratchh
+bindsym $mod+o set $currscratch mail;    exec bash $curr/open_scratch.sh mail $scratchw $scratchh
 
 exec lxterminal
 
