--- a/config
+++ b/config
@@ -3,6 +3,8 @@ include config-default
 bindsym $emod+Tab mode "passthrough"
 bindsym $emod+Escape exec bash $curr/open_scratch.sh $currscratch $scratchw $scratchh
 bindsym $mod+j exec bash $curr/open_scratch.sh $currscratch $scratchw $scratchh
+# workaround for bug where multiple scratchpads open -- closes extra scratchpad
+bindsym $mod+p scratchpad show; mode "default"
 
 mode passthrough {
   bindsym $emod+Escape scratchpad show; mode "default"
